--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install Ionic
+        run: npm install -g @ionic/cli
+
       - name: Install dependencies
         run: npm install
 
