--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "stripe": "^15.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
