Ajout du fichier d'env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build
         run: ionic build --prod
 
+      - name: Add env files prod
+        run: echo "${{ secrets.ENVPROD }}" > src/environments/env.prod.exclude.ts
+
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         with:
